issues/gateway-re-encrypt-alpn-mismatch/disable-istio-mtls-for-app.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: disable-istio-mtls-for-app
  namespace: default
spec:
  selector:
    matchLabels:
      app: app
  mtls:
    mode: STRICT
  portLevelMtls:
    8443:
      mode: DISABLE
