issues/gateway-re-encrypt-alpn-mismatch/gateway-port-level-settings.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: app-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - app.com
    tls:
      mode: SIMPLE
      credentialName: app-tls
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: app
spec:
  hosts:
  - app.com
  gateways:
  - app-gateway
  http:
  - match:
    - port: 443
    route:
    - destination:
        host: app.default.svc.cluster.local
        port:
          number: 443
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: originate-simple-tls
spec:
  host: app.default.svc.cluster.local
  trafficPolicy:
    portLevelSettings:
    - port:
        number: 443
      tls:
        mode: SIMPLE
        sni: app.com
