issues/gateway-re-encrypt-alpn-mismatch/istio-configs.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: app-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - app.com
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - app.com
    tls:
      mode: SIMPLE
      credentialName: app-cert
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: app
spec:
  hosts:
  - app.com
  gateways:
  - app-gateway
  http:
  - match:
    - port: 80
    route:
    - destination:
        host: app.default.svc.cluster.local
        port:
          number: 80
    headers:
      request:
        set:
          Host: app.com
  - match:
    - port: 443
    route:
    - destination:
        host: app.default.svc.cluster.local
        port:
          number: 443
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: originate-simple-tls
spec:
  host: app.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: SIMPLE
      sni: app.com
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: istio-system
spec:
  mtls:
    mode: STRICT
